...
function HomeStack() {
  return (
    <Stack.Navigator screenOptions={{ headerLargeTitle: true }}>
      <Stack.Screen
        name="Home"
        component={HomeScreen}
        options={{ title: 'User list' }}
      />
      <Stack.Screen
        name="Details"
        component={DetailsScreen}
        options={({ route }) => ({ title: route.params.employee.name })}
      />
...
